--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 .flex-container{
 	display: flex;
   	flex-direction: row;
-  	align-items: baseline;
   	flex-wrap: nowrap;
   	width: 100%;
 	border: dotted pink;
@@ -10,26 +9,27 @@
 header {
 	position: absolute;
 	width:100%;
+	height:800px;
+	background-color:(255,255,255);
 	text-align: center;
 	border: dotted pink;
 }
 
-
 .cardContainer {
 	background-color: green;
-	width: 33.33%;
-	height:100px;
+	width: 15%;
+	height:400px;
 }
 
-.mapContainer {
-	background-color: blue;
-	width: 33.33%;
-	height:100px;
+#map {
+	z-index:-1;
+	width: 70%;
+	height:400px;
 }
 
 .searchContainer {
 	background-color: pink;
-	width: 33.33%;
-	height:100px;
+	width: 15%;
+	height:400px;
 }
 
