--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ header {
 	background-color: green;
 	text-align: center;
 	color: white;
-	width: 25%;
+	width: 100%;
 	height:800px;
 	max-height: 800px;
 	overflow: scroll;
@@ -60,7 +60,13 @@ header {
 }
 
 /* section for map */
-
+#locationSearch {
+  z-index: 1;
+  display: block;
+  position: absolute;
+  left: 40%;
+  top: 75%;
+}
 #map {
 	width:100%;
 	height:800px;
