--- a/index.css
+++ b/index.css
@@ -1,8 +1,16 @@
+body {
+  padding: 0;
+  margin: 0;
+}
 .flex-container{
-		display: flex;
+    box-sizing: border-box;
+    margin:0;
+    padding: 0;
+    /* display: flex;
 		overflow: hidden;
   	flex-direction: row;
   	flex-wrap: nowrap;
+    justify-content: space-between; */
 		width: 100%;
 		border: dotted pink;
 }
@@ -18,21 +26,21 @@ header {
 	border: dotted pink;
 }
 
- /* section for card */
-
+  /* section for card */
 .cardContainer {
-	background-color: green;
-	text-align: center;
+	background-color: rgba(161,179,206,0.5);
+  position: absolute;
+  left:0;
+  text-align: center;
 	color: white;
-	width: 100%;
-	height:800px;
-	max-height: 800px;
-	overflow: scroll;
+	width: 25%;
+	height: 100vh;
+	overflow-y: scroll;
 }
 
 .card {
 	border: 2px solid black;
-	width= 100%;
+	width: 100%;
 	flex-grow: 1;
 }
 
@@ -64,21 +72,26 @@ header {
   z-index: 1;
   display: block;
   position: absolute;
-  left: 40%;
+  left: 43%;
   top: 75%;
 }
+
 #map {
+  position: absolute;
+  z-index:-1;
 	width:100%;
-	height:800px;
+	height:100vh;
 }
 
 /* section for search sidebar */
 
 .searchContainer {
-	background-color: pink;
+  position: absolute;
+  right: 0;
+	background-color: rgba(161,179,206,0.5);
 	width: 25%;
-	height:800px;
-	overflow: scroll;
+	height:100vh;
+	overflow-y: scroll;
 }
 
 .result {
