--- a/index.css
+++ b/index.css
@@ -6,24 +6,17 @@ body {
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    /* display: flex;
-		overflow: hidden;
-  	flex-direction: row;
-  	flex-wrap: nowrap;
-    justify-content: space-between; */
-		width: 100%;
-		border: dotted pink;
+		width: 100%;;
 }
 
 header {
-	z-index: 1;
-	display: none;
+	z-index: 2;
 	position: absolute;
+  color: white;
 	width:100%;
-	height:800px;
-	background-color:rgba(0, 0, 255, 0.5);
+	height:100vh;
+	background-color:rgba(0, 0, 255, .9);
 	text-align: center;
-	border: dotted pink;
 }
 
   /* section for card */
@@ -71,10 +64,21 @@ header {
     display: none;
     position: absolute;
     background-color: lightblue;
-    z-index: 2;
+    z-index: 3;
     text-align: center;
     height: 100vh;
     width: 100%;
+}
+
+.event {
+  border: 1px solid black;
+}
+
+.hideStyled {
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  bottom: 0;
 }
 
 /* section for map */
