--- a/index.css
+++ b/index.css
@@ -1,115 +1,141 @@
-body {
-  padding: 0;
-  margin: 0;
-}
-.flex-container{
-    box-sizing: border-box;
-    margin:0;
-    padding: 0;
-		width: 100%;;
-}
-
-header {
-	z-index: 2;
-	position: absolute;
-  color: white;
-	width:100%;
-	height:100vh;
-	background-color:rgba(0, 0, 255, .9);
-	text-align: center;
-}
-
-  /* section for card */
-.cardContainer {
-	background-color: rgba(161,179,206,0.5);
-  position: absolute;
-  left:0;
-  text-align: center;
-	color: white;
-	width: 25%;
-	height: 100vh;
-	overflow-y: scroll;
-}
-
-.card {
-	border: 2px solid black;
-	width: 100%;
-	flex-grow: 1;
-}
-
-.notes {
-	display: block;
-	margin: 0 auto;
-	width: 90%;
-	height: 50px;
-}
-
-.selected {
-	background-color: brown;
-}
-
-#showFull {
-
-}
-
-#create {
-	margin-top:0;
-	align-self:start
-}
-
-#title {
-}
-
-#styledItinerary {
-    display: none;
-    position: absolute;
-    background-color: lightblue;
-    z-index: 3;
-    text-align: center;
-    height: 100vh;
-    width: 100%;
-}
-
-.event {
-  border: 1px solid black;
-}
-
-.hideStyled {
-  display: block;
-  position: relative;
-  margin: 0 auto;
-  bottom: 0;
-}
-
-/* section for map */
-#locationSearch {
-  z-index: 1;
-  display: block;
-  position: absolute;
-  left: 43%;
-  top: 75%;
-}
-
 #map {
   position: absolute;
   z-index:-1;
-	width:100%;
-	height:100vh;
+  width:100%;
+  height:100vh;
 }
 
-/* section for search sidebar */
+header {
+  z-index: 2;
+  position: absolute;
+  color: white;
+  width:100%;
+  height:100vh;
+  background-color:rgba(0, 0, 255, .9);
+  text-align: center;
+}
+
+.cardContainer {
+  background-color: rgba(161,179,206,0.5);
+  position: absolute;
+  left:0;
+  text-align: center;
+  color: white;
+  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
+}
 
 .searchContainer {
   position: absolute;
   right: 0;
-	background-color: rgba(161,179,206,0.5);
-	width: 25%;
-	height:100vh;
-	overflow-y: scroll;
+  background-color: rgba(161,179,206,0.5);
+  width: 25%;
+  height:100vh;
+  overflow-y: scroll;
 }
 
-.result {
-	border: solid black 2px;
-	background: lightgrey;
-	z-index: 1;
+@media (min-width: 960px){
+  body {
+    padding: 0;
+    margin: 0;
+  }
+  .flex-container{
+      box-sizing: border-box;
+      margin:0;
+      padding: 0;
+  		width: 100%;;
+  }
+
+  header {
+  	position: absolute;
+    color: white;
+  	width:100%;
+  	height:100vh;
+  	background-color:rgba(0, 0, 255, .9);
+  	text-align: center;
+  }
+
+    /* section for card */
+  .cardContainer {
+    left:0;
+  	color: white;
+  	width: 25%;
+  	height: 100vh;
+  	overflow-y: scroll;
+  }
+
+  .card {
+  	border: 2px solid black;
+  	width: 100%;
+  	flex-grow: 1;
+  }
+
+  .notes {
+  	display: block;
+  	margin: 0 auto;
+  	width: 90%;
+  	height: 50px;
+  }
+
+  .selected {
+  	background-color: brown;
+  }
+
+  #showFull {
+
+  }
+
+  #create {
+  	margin-top:0;
+  	align-self:start
+  }
+
+  #title {
+  }
+
+  #styledItinerary {
+      display: none;
+      position: absolute;
+      background-color: lightblue;
+      z-index: 3;
+      text-align: center;
+      height: 100vh;
+      width: 100%;
+  }
+
+  .event {
+    border: 1px solid black;
+  }
+
+  .hideStyled {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    bottom: 0;
+  }
+
+  /* section for map */
+  #locationSearch {
+    z-index: 1;
+    display: block;
+    position: absolute;
+    left: 43%;
+    top: 75%;
+  }
+
+
+  /* section for search sidebar */
+
+  .searchContainer {
+    right: 0;
+  	width: 25%;
+  	height:100vh;
+  }
+
+  .result {
+  	border: solid black 2px;
+  	background: lightgrey;
+  	z-index: 1;
+  }
 }
