--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@ body {
 }
 
 header {
-  display: none;
   z-index: 2;
   position: absolute;
   color: white;
@@ -32,8 +31,13 @@ header {
   text-align: center;
   color: white;
   width: 100%;
-  height: 70vh;
+  height: 50vh;
   overflow-y: scroll;
+}
+
+#create{
+  position: fixed;
+  left:8.5%;
 }
 
 .card {
@@ -69,7 +73,7 @@ header {
     border: 10px double rgb(58, 56, 61);
     z-index: 3;
     text-align: center;
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 .event {
@@ -85,7 +89,7 @@ header {
   border: 5px black;
   background-color: rgba(161,179,206,0.5);
   width: 100%;
-  height:30vh;
+  height:50vh;
   overflow-y: scroll;
 }
 
@@ -98,7 +102,7 @@ header {
 
 }
 
-.result:hover {
+.addEvent:hover, #showDetails:hover {
   cursor: pointer;
 }
 
@@ -116,13 +120,18 @@ header {
   left: 37%;
   top: 5%;
 }
+#initialLocationSearch {
+  border: solid black 1px;
+  background-color:rgba(161,179,206,0.8);
+  display: block;
+}
 
 .js-search {
   text-align: center;
 }
 
 @media (min-width: 960px){
-  .flex-container{
+  main {
       box-sizing: border-box;
       margin:0;
       padding: 0;
@@ -144,7 +153,7 @@ header {
     left:0;
   	color: white;
   	width: 25%;
-  	height: 100vh;
+  	height: 50vh;
   	overflow-y: scroll;
   }
 
@@ -181,9 +190,12 @@ header {
   /* section for search sidebar */
 
   .searchContainer {
-    right: 0;
+    display: none;
+    border: solid black;
+    left:0;
+    bottom:0;
   	width: 25%;
-  	height:100vh;
+  	height:50vh;
   }
 
 }
