--- a/index.css
+++ b/index.css
@@ -15,11 +15,28 @@ body {
 .intro-page {
   z-index: 2;
   position: absolute;
-  color: white;
   width:100%;
   height:100vh;
-  background-color:rgba(0, 0, 255, .9);
+  background-image: url(imgs/Intro.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
+}
+
+.description-container {
+  display: inline-block;
+  position: relative;
+  top:35%;
+  height: 25vh;
+  width: 50%;
+  color: black;
+  background-color: white;
+}
+
+.initial-location-search {
+  border: solid black 1px;
+  display: block;
+  width: 100%;
 }
 
 .card-container {
@@ -82,6 +99,7 @@ body {
 .styled-itinerary {
     display: none;
     position: absolute;
+    font-family: 'Indie Flower', cursive;
     background-color: rgb(232, 227, 239);
     box-sizing: border-box;
     z-index: 3;
@@ -91,6 +109,7 @@ body {
 }
 .itin-title {
   border: 10px double rgb(58, 56, 61);
+  font-weight: bold;
   margin: 0;
 }
 .events {
@@ -151,11 +170,7 @@ body {
   left: 37%;
   top: 5%;
 }
-.initial-location-search {
-  border: solid black 1px;
-  background-color:rgba(161,179,206,0.8);
-  display: block;
-}
+
 
 .js-search {
   text-align: center;
