--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Kalam', sans-serif;
 }
 
 #map {
@@ -13,7 +14,7 @@ body {
 }
 
 .intro-page {
-  z-index: 2;
+  z-index: 3;
   position: absolute;
   width:100%;
   height:100vh;
@@ -27,7 +28,6 @@ body {
   display: inline-block;
   position: relative;
   top:35%;
-  height: 25vh;
   width: 50%;
   color: black;
   background-color: white;
