--- a/index.css
+++ b/index.css
@@ -28,22 +28,24 @@ body {
   display: inline-block;
   position: relative;
   top:35%;
-  width: 50%;
+  background-color: rgba(175, 140, 100,0.6);
+  box-shadow: 0px 0px 0px 20px white inset;
+  height: 40vh;
+  width: 75%;
   color: black;
-  background-color: white;
 }
 
 .initial-location-search {
-  border: solid black 1px;
   display: block;
-  width: 100%;
+  margin: 0 auto;
+  width: inherit;
+
 }
 
 .card-container {
   box-sizing:border-box;
   border: 2px;
-  z-index: 1;
-  background-color: rgba(161,179,206,0.9);
+  background-color: rgba(175, 140, 100,0.9);
   position: absolute;
   text-align: center;
   width: 100%;
@@ -52,12 +54,17 @@ body {
   overflow-y: scroll;
 }
 
-#create{
-  position: fixed;
-  left: 23.8%;
+#create {
   height: 25px;
-  width: 50%;
+  width: 100px;
+  margin: 2px;
+}
+
+#showFull {
+  height: 25px;
+  width: 100px;
   margin: 5px;
+  margin-top: 15px;
 }
 
 .card {
@@ -83,59 +90,56 @@ body {
   height: 50px;
 }
 
-#showFull {
-  position: fixed;
-  left: 23.8%;
-  height: 25px;
-  width: 50%;
-  margin: 5px;
-  margin-top: 15px;
-}
-
 #title {
   margin-top: 25px;
 }
 
 .styled-itinerary {
     display: none;
-    position: absolute;
+    margin: 0 auto;
+    font-size: 0;
     font-family: 'Indie Flower', cursive;
     background-color: rgb(232, 227, 239);
     box-sizing: border-box;
     z-index: 3;
     text-align: center;
-    height: 100%;
-    width: 100%;
+    width: 8.5in;
 }
 .itin-title {
   border: 10px double rgb(58, 56, 61);
   font-weight: bold;
+  font-size: 30px;
   margin: 0;
 }
 .events {
   margin: 0;
-  border-left: 10px double rgb(58, 56, 61);
-  border-right: 10px double rgb(58, 56, 61);
+}
+
+.events:first-child {
+  border-top: 10px double rgb(58, 56, 61);
+
 }
 
 .footer {
-  border-bottom: 10px double rgb(58, 56, 61);
-  border-right: 10px double rgb(58, 56, 61);
-  border-left: 10px double rgb(58, 56, 61);
+  background-color: rgb(232, 227, 239);
+  font-size: 15px;
 }
 .event {
+  font-size: 15px;
+  box-sizing: border-box;
   border-bottom: 2px solid black;
   margin: 0 auto;
-  width: 50%;
+  width: 100%;
 }
 
 .search-container {
   display: none;
   position: absolute;
+  z-index: 1;
   bottom: 0;
   box-sizing: border-box;
   border: 5px black;
-  background-color: rgba(161,179,206,0.5);
+  background-color: rgba(175, 140, 100,0.9);
   width: 100%;
   height: 50vh;
   top: 50%;
@@ -146,13 +150,18 @@ body {
   box-sizing: border-box;
   border: solid black 2px;
   height: 100%;
-  background-color: rgba(161,179,206,0.8);
+  background-color: rgba(175, 140, 100,0.9);
   line-height: 30px;
 
 }
 
-.addEvent:hover, .showDetails:hover {
+.js-add-event:hover, .js-show-details:hover {
   cursor: pointer;
+}
+
+.js-add-event {
+  background-color: rgb(0, 255, 88);
+  border-radius: 2px;
 }
 
 .showCC {
@@ -164,9 +173,10 @@ body {
 .location-search {
   z-index: 0;
   border: solid black 1px;
-  background-color:rgba(161,179,206,0.8);
+  background-color:rgba(0, 255, 88,0.6);
   display: block;
   position: absolute;
+  padding: 5px;
   left: 37%;
   top: 5%;
 }
@@ -186,6 +196,7 @@ body {
   }
 
   .intro-page {
+    display: none;
   	position: absolute;
     color: white;
   	width: 100%;
@@ -194,29 +205,49 @@ body {
   	text-align: center;
   }
 
+  .description-container {
+    height: 425px;
+    width: 350px;
+    top: 20%;
+
+  }
+
+  .header {
+    margin-top: 50px;
+    font-size: 30px;
+  }
+
+  .white-space {
+    background-color: white;
+    height: 90px;
+    position: relative;
+    margin-top: 155px;
+  }
+
     /* section for card */
   .card-container {
     display: block;
     left: 0;
   	color: white;
   	width: 25%;
-  	height: 50vh;
+  	height: 100vh;
     top: 0;
   	overflow-y: scroll;
   }
 
   #showFull {
-    width: 15%;
+    width: 50%;
     left: 4.4%;
   }
 
   #create {
-    width: 15%;
+    width: 50%;
     left: 4.4%;
   }
 
   .showCC {
-    display: none;
+    position: absolute;
+    top: 0;
   }
 
   .notes {
@@ -257,7 +288,8 @@ body {
     border: solid black;
     left:0;
   	width: 25%;
-  	height:50vh;
+  	height:100vh;
+    top: 0;
   }
 
 }
