--- a/index.css
+++ b/index.css
@@ -58,6 +58,8 @@ body {
   height: 25px;
   width: 100px;
   margin: 2px;
+  border-radius: 5px;
+  background-color: rgb(25, 255, 105)
 }
 
 #showFull {
@@ -110,14 +112,11 @@ body {
   font-weight: bold;
   font-size: 30px;
   margin: 0;
+  padding-bottom: 55px;
+  height: 1in;
 }
 .events {
   margin: 0;
-}
-
-.events:first-child {
-  border-top: 10px double rgb(58, 56, 61);
-
 }
 
 .footer {
@@ -130,6 +129,16 @@ body {
   border-bottom: 2px solid black;
   margin: 0 auto;
   width: 100%;
+  height: 2.5in;
+}
+
+#js-hide-styled:hover {
+  cursor: pointer;
+}
+
+#js-hide-styled {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .search-container {
@@ -161,7 +170,7 @@ body {
 
 .js-add-event {
   background-color: rgb(0, 255, 88);
-  border-radius: 2px;
+  border-radius: 5px;
 }
 
 .showCC {
