--- a/index.css
+++ b/index.css
@@ -6,17 +6,13 @@ body {
 }
 
 #map {
-  position: absolute;
-  z-index: -1;
-  width: 100%;
   height: 50vh;
-  top: 0;
 }
 
 #overrides .intro-page {
   position: absolute;
-  width:100%;
-  height:100vh;
+  width:120%;
+  height:120%;
   background-image: url(imgs/Intro.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -27,11 +23,15 @@ body {
   list-style-type: decimal;
 }
 
+#overrides .card-bar {
+  height: 50vh;
+}
+
 #overrides .jumbotron {
   /* position: relative;
   top:25%; */
   background-color: rgba(175, 140, 100,0.8);
-  font-size: 2.5vw;
+  font-size: 2.5vh;
   /* box-shadow: 0px 0px 0px 20px white inset;
   height: 60vh;
   width: 75%;
@@ -40,8 +40,9 @@ body {
 
 .header {
   text-align:center;
-  /* font-size: 25px;
-  margin-top: 60px; */
+  font-size: 4vh;
+  font-weight:bold;
+  margin-top: 60px;
 }
 
 /* .initial-location-search {
@@ -67,46 +68,33 @@ body {
   overflow-y: scroll;
 }
 
-/* #create {
-  height: 25px;
-  width: 100px;
-  margin: 2px;
-  border-radius: 5px;
+ #create {
   background-color: rgb(25, 255, 105);
-  width: 50%;
 }
-
+/*
 #showFull {
   height: 25px;
   width: 100px;
   margin: 5px;
   margin-top: 2px;
   width: 50%;
-}
+}*/
 
-.card-form {
-  box-sizing:border-box;
-  border: 2px;
+#overrides .card-bar {
   background-color: rgba(175, 140, 100,0.9);
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  height: 15vh;
-  bottom: 35%;
 }
 
-.card {
-  box-sizing:border-box;
+#overrides .card {
   border: 2px solid black;
-  margin-top: 20px;
+  background-color: rgba(175, 140, 100,0.9);
 }
-
+/*
 .delete {
   display: block;
   margin: 0 auto;
 } */
 
-.selected {
+#overrides .selected {
   border: 5px grey inset;
   background-color: rgba(107, 195, 239, 0.8);
 }
@@ -209,6 +197,7 @@ body {
 
 #overrides .showCC {
   position: absolute;
+  left: 15px;
   top: 50%;
   z-index: 2;
 }
@@ -232,7 +221,15 @@ body {
 
 
 @media (min-width: 960px){
+  /* #overrides .map-container {
+  width: 100%;
+  margin: 0;
+} */
 
+/* .map-row {
+  width: 50%;
+  padding: 0;
+} */
   main {
       display: none;
       box-sizing: border-box;
@@ -272,6 +269,11 @@ body {
     max-height: 100%;
     overflow-y: scroll;
   }
+
+  /* #overrides .card-container {
+      width: 50%;
+  } */
+
 #overrides .card-bar {
   height: 100vh;
 }
@@ -324,10 +326,8 @@ body {
     top: 5%;
   }
 
-  #map {
-    width: 75%;
+   #map {
     height: 100vh;
-    right: 0;
   }
 
   /* section for search sidebar */
