--- a/index.css
+++ b/index.css
@@ -23,9 +23,6 @@ body {
   list-style-type: decimal;
 }
 
-#overrides .card-bar {
-  height: 50vh;
-}
 
 #overrides .jumbotron {
   /* position: relative;
@@ -59,13 +56,18 @@ body {
 
  #overrides .card-bar {
    text-align: center;
+   height: 50vh;
   /* border: 2px; */
   /* background-color: rgba(175, 140, 100,0.9); */
   /* text-align: center;
   width: 100%;
   height: 35vh;
   bottom:0;*/
-  overflow-y: scroll;
+  background-color: rgba(175, 140, 100,0.9);
+  overflow-y: auto;
+}
+
+#overrides .card-c {
 }
 
  #create {
@@ -80,9 +82,6 @@ body {
   width: 50%;
 }*/
 
-#overrides .card-bar {
-  background-color: rgba(175, 140, 100,0.9);
-}
 
 #overrides .card {
   border: 2px solid black;
@@ -99,12 +98,12 @@ body {
   background-color: rgba(107, 195, 239, 0.8);
 }
 
-/* .notes {
+ #overrides .notes {
   display: block;
   margin: 0 auto;
   width: 90%;
   height: 50px;
-} */
+}
 
 /* #title {
   margin-top: 0px;
@@ -163,7 +162,7 @@ body {
   font-weight: bold;
 }
 
-.search-container {
+#overrides .search-c {
   display: none;
   position: absolute;
   z-index: 1;
@@ -174,7 +173,7 @@ body {
   width: 100%;
   height: 50vh;
   top: 50%;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 .result {
@@ -197,6 +196,11 @@ body {
 
 #overrides .showCC {
   position: absolute;
+  border: outset grey 2px;
+  border-radius: 5px;
+  background-color: rgb(185, 211, 194);
+  padding: 5px;
+  top: 5px;
   left: 15px;
   top: 50%;
   z-index: 2;
@@ -213,12 +217,9 @@ body {
   top: 0;
 }
 
-
 .js-search {
   text-align: center;
 }
-
-
 
 @media (min-width: 960px){
   /* #overrides .map-container {
@@ -232,20 +233,20 @@ body {
 } */
   main {
       display: none;
-      box-sizing: border-box;
+      /* box-sizing: border-box;
       margin:0;
       padding: 0;
-      width: 100%;
+      width: 100%; */
   }
 
-  .intro-page {
+  /* .intro-page {
     position: absolute;
     color: white;
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 255, .9);
     text-align: center;
-  }
+  } */
 
   .jumbotron {
     margin-top: 12%;
@@ -266,13 +267,9 @@ body {
     /* section for card */
  #overrides .card-c {
     color: white;
-    max-height: 100%;
-    overflow-y: scroll;
+    max-height: 100vh;
   }
 
-  /* #overrides .card-container {
-      width: 50%;
-  } */
 
 #overrides .card-bar {
   height: 100vh;
@@ -298,15 +295,15 @@ body {
 
   #overrides .showCC {
     position: absolute;
-    top: 0;
+    top: 5px;
   }
-/*
-  .notes {
+
+  #overrides .notes {
     display: block;
     margin: 0 auto;
-    width: 90%;
+    width: 100%;
     height: 50px;
-  } */
+  }
 
 
 
@@ -332,11 +329,10 @@ body {
 
   /* section for search sidebar */
 
-  .search-container {
+  #overrides .search-c {
     display: none;
     border: solid black;
     left:0;
-    width: 25%;
     height:100vh;
     top: 0;
   }
