--- a/index.css
+++ b/index.css
@@ -1,18 +1,22 @@
 
-body {
+.body {
   padding: 0;
   margin: 0;
   font-family: 'Kalam', sans-serif;
 }
 
-#map {
+.map {
   height: 50vh;
 }
 
-#overrides .intro-page {
+.main > .container-fluid {
+  padding: 0;
+}
+
+.intro-page {
   position: absolute;
   width:120%;
-  height:120%;
+  height: 100vh;
   background-image: url(imgs/Intro.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -24,15 +28,10 @@ body {
 }
 
 
-#overrides .jumbotron {
-  /* position: relative;
-  top:25%; */
+.col-10 >  .jumbotron {
+  margin-top: 20%;
   background-color: rgba(175, 140, 100,0.8);
   font-size: 2.5vh;
-  /* box-shadow: 0px 0px 0px 20px white inset;
-  height: 60vh;
-  width: 75%;
-  color: black; */
 }
 
 .header {
@@ -42,63 +41,35 @@ body {
   margin-top: 60px;
 }
 
-/* .initial-location-search {
-  display: block;
-  margin: 0 auto;
-  width: inherit;
 
-} */
-
-#overrides main {
+body > .main {
   display: none;
 
 }
 
- #overrides .card-bar {
-   text-align: center;
-   height: 50vh;
-  /* border: 2px; */
-  /* background-color: rgba(175, 140, 100,0.9); */
-  /* text-align: center;
-  width: 100%;
-  height: 35vh;
-  bottom:0;*/
+ .col-12 .card-bar {
+  text-align: center;
+  height: 50vh;
   background-color: rgba(175, 140, 100,0.9);
   overflow-y: auto;
 }
 
-#overrides .card-c {
-}
-
- #create {
+ .create {
   background-color: rgb(25, 255, 105);
 }
-/*
-#showFull {
-  height: 25px;
-  width: 100px;
-  margin: 5px;
-  margin-top: 2px;
-  width: 50%;
-}*/
 
 
-#overrides .card {
+.cards-list > .card {
   border: 2px solid black;
   background-color: rgba(175, 140, 100,0.9);
 }
-/*
-.delete {
-  display: block;
-  margin: 0 auto;
-} */
 
 #overrides .selected {
   border: 5px grey inset;
   background-color: rgba(107, 195, 239, 0.8);
 }
 
- #overrides .notes {
+.card > .notes {
   display: block;
   margin: 0 auto;
   width: 90%;
@@ -137,7 +108,7 @@ body {
   font-size: 15px;
 }
 
-#js-hide-styled {
+.hide-styled {
   color: rgb(204, 26, 18);
   border: none;
   background-color: rgb(160, 139, 138);
@@ -153,25 +124,22 @@ body {
   height: 2.5in;
 }
 
-#js-hide-styled:hover {
+.hide-styled:hover {
   cursor: pointer;
 }
 
-#js-hide-styled {
+.hide-styled {
   font-size: 20px;
   font-weight: bold;
 }
-
-#overrides .search-c {
+.search-wrapper > .container-fluid {
+  padding: 0;
+}
+ .search-c {
   display: none;
-  position: absolute;
   z-index: 1;
-  bottom: 0;
-  box-sizing: border-box;
   border: 5px black;
   background-color: rgba(175, 140, 100,0.9);
-  width: 100%;
-  height: 50vh;
   top: 50%;
   overflow: auto;
 }
@@ -194,17 +162,23 @@ body {
   border-radius: 5px;
 }
 
-#overrides .showCC {
+ .showCC {
   position: absolute;
   border: outset grey 2px;
   border-radius: 5px;
   background-color: rgb(185, 211, 194);
   padding: 5px;
-  top: 5px;
   left: 15px;
-  top: 50%;
+  top: 51vh;
   z-index: 2;
 }
+
+.search-wrapper {
+  position: absolute;
+  top: 50vh;
+  width: 100%;
+}
+
 
 .location-search {
   z-index: 0;
@@ -212,8 +186,11 @@ body {
   background-color:rgba(0, 255, 88,0.6);
   display: block;
   position: absolute;
+  width: 270px;
+  left: 0;
+  right: 0;
+  margin: auto;
   padding: 5px;
-  left: 10%;
   top: 0;
 }
 
@@ -222,31 +199,9 @@ body {
 }
 
 @media (min-width: 960px){
-  /* #overrides .map-container {
-  width: 100%;
-  margin: 0;
-} */
-
-/* .map-row {
-  width: 50%;
-  padding: 0;
-} */
-  main {
+  .main {
       display: none;
-      /* box-sizing: border-box;
-      margin:0;
-      padding: 0;
-      width: 100%; */
   }
-
-  /* .intro-page {
-    position: absolute;
-    color: white;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 255, .9);
-    text-align: center;
-  } */
 
   .jumbotron {
     margin-top: 12%;
@@ -265,53 +220,31 @@ body {
 
 
     /* section for card */
- #overrides .card-c {
+  .card-c {
     color: white;
     max-height: 100vh;
   }
 
 
-#overrides .card-bar {
+  .col-lg-4 > .card-bar {
   height: 100vh;
 }
-/*
-  .card-form {
-    box-sizing:border-box;
-    border: 0px;
-    width: 25%;
-    height: 10vh;
-    top: 0;
-  }
 
-  #showFull {
-    width: 50%;
-    left: 4.4%;
-  }
-
-  #create {
-    width: 50%;
-    left: 4.4%;
-  } */
-
-  #overrides .showCC {
+  .showCC {
     position: absolute;
     top: 5px;
   }
 
-  #overrides .notes {
+  .notes {
     display: block;
     margin: 0 auto;
-    width: 100%;
-    height: 50px;
+    width: 240px;
+    height: 100px;
   }
 
 
-
-  #hideStyled {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    bottom: 0;
+  .search-wrapper {
+    top: 0;
   }
 
   /* section for map */
@@ -323,13 +256,13 @@ body {
     top: 5%;
   }
 
-   #map {
+   .map {
     height: 100vh;
   }
 
   /* section for search sidebar */
 
-  #overrides .search-c {
+  .search-c {
     display: none;
     border: solid black;
     left:0;
